home images . cara-text changes

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <div class="ashade-album-item__overlay"></div>
                             <div class="slide-inner--info">
                                 <h1>The Drive<br>of your life</h1>
-                                <a href="gallery.html" data-type="page-transition" class="ms-btn--slider">Engagement Shoots</a>
+                                <a href="gallery.html" data-type="page-transition" class="ms-btn--slider">Wedding Shoots</a>
                             </div>
                         </div>
                     </div>
@@ -114,8 +114,8 @@
                             </div>
                             <div class="ashade-album-item__overlay"></div>
                             <div class="slide-inner--info">
-                                <h1>The Power<br>of Dreams</h1>
-                                <a href="gallery.html" data-type="page-transition" class="ms-btn--slider">take a look</a>
+                                <h1>To Love  & <br>  Be Loved</h1>
+                                <a href="gallery.html" data-type="page-transition" class="ms-btn--slider">Wedding Shoots</a>
                             </div>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                             <div class="ashade-album-item__overlay"></div>
                             <div class="slide-inner--info">
                                 <h1>romantic<br>chipping</h1>
-                                <a href="gallery.html" data-type="page-transition" class="ms-btn--slider">take a look</a>
+                                <a href="gallery.html" data-type="page-transition" class="ms-btn--slider">Engagement Shoots</a>
                             </div>
                         </div>
                     </div>
@@ -140,8 +140,8 @@
                             </div>
                             <div class="ashade-album-item__overlay"></div>
                             <div class="slide-inner--info">
-                                <h1>What<br>the Fog?</h1>
-                                <a href="gallery.html" data-type="page-transition" class="ms-btn--slider">take a look</a>
+                                <h1> A wish <br> coming true</h1>
+                                <a href="gallery.html" data-type="page-transition" class="ms-btn--slider">Pre-Wedding Shoots</a>
                             </div>
                         </div>
                     </div>
@@ -152,8 +152,8 @@
                             </div>
                             <div class="ashade-album-item__overlay"></div>
                             <div class="slide-inner--info">
-                                <h1>What<br>the Fog?</h1>
-                                <a href="gallery.html" data-type="page-transition" class="ms-btn--slider">take a look</a>
+                                <h1>toast to <br>new lives</h1>
+                                <a href="gallery.html" data-type="page-transition" class="ms-btn--slider">Wedding Shoots</a>
                             </div>
                         </div>
                     </div>
@@ -436,10 +436,10 @@
             </div>
             <div class="grid">
                 <div class="col-12   col-lg-4 grid-item prewed ">
-                    <img src="assets/images/pre1.jpg" alt="">
+                    <img src="assets/pre-wedding/prewed-(6).jpg" alt="">
                 </div>
                 <div class="col-12   col-lg-4 grid-item prewed">
-                    <img src="assets/images/pre2.jpg" alt="">
+                    <img src="assets/pre-wedding/prewed-(22).jpg" alt="">
                 </div>
                 <div class="col-12   col-lg-4 grid-item prewed">
                     <img src="assets/images/pre3.jpg" alt="">
@@ -449,21 +449,21 @@
                         </a></div>
                 </div>
                 <div class="col-12 col-md-6  grid-item engage ">
-                    <img src="assets/images/eng01.jpg" alt="">
+                    <img src="assets/engagement/engagement (1).jpg" alt="">
                 </div>
                 <div class="col-12 col-md-6  grid-item engage">
-                    <img src="assets/images/eng02.jpg" alt="">
+                    <img src="assets/engagement/engagement (2).jpg" alt="">
                 </div>
                 <div class="text-center more col-md-12  grid-item engage"><a href="#!">More
                     </a></div>
                 <div class="col-12  col-md-4 grid-item wedd">
-                    <img src="assets/images/wed01.jpg" alt="">
+                    <img src="assets\wedding\Wedding-(2).jpg" alt="">
                 </div>
                 <div class="col-12  col-md-4  grid-item wedd">
-                    <img src="assets/images/wed02.jpg" alt="">
+                    <img src="assets\wedding\Wedding-(1).jpg" alt="">
                 </div>
                 <div class="col-12  col-md-4 grid-item wedd">
-                    <img src="assets/images/wed03.jpg" alt="">
+                    <img src="assets\wedding\Wedding-(3).jpg" alt="">
                 </div>
                 <div class="text-center more col-md-12  grid-item wedd"><a href="#!">More
                     </a></div>
