--- a/index.html
+++ b/index.html
@@ -526,9 +526,9 @@
                 <div class="col-md-4">
                     <ul>
                         <li><img src="assets/images/twitter.svg" class="img-fluid social-item"></li>
-                        <li><img src="assets/images/facebook.svg" class="img-fluid social-item"></li>
-                        <li><img src="assets/images/instagram.svg" class="img-fluid social-item"></li>
-                        <li><img src="assets/images/youtube.svg" class="img-fluid social-item"></li>
+                        <li><a href="https://www.facebook.com/vickystudiophotography/"><img src="assets/images/facebook.svg" class="img-fluid social-item"></a></li>
+                        <li><a href="https://www.instagram.com/vicky_studio_photography/?hl=en"><img src="assets/images/instagram.svg" class="img-fluid social-item"></a></li>
+                        <li><a hre="https://www.youtube.com/user/tikeshmaskare"><img src="assets/images/youtube.svg" class="img-fluid social-item"></a></li>
                     </ul>
                 </div>
                 <div class="col-md-4 pt-3">
