--- a/index.html
+++ b/index.html
@@ -471,10 +471,15 @@
                     <img src="assets/images/kid01.jpg" alt="">
                 </div> -->
                 <div class="col-12  col-md-6 grid-item cinema pb-3">
-<iframe width="540" height="280" src="https://www.youtube.com/embed/848INqivDqI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>               </div>
+                                        <a class="gallery_img" href="">
+
+<iframe width="540" height="280" src="https://www.youtube.com/embed/848INqivDqI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>             
+                                       <div class="text-center more col-md-12  grid-item cinema"><a href="#!">More
+                    </a></div>       
+              
                 <div class="col-12  col-md-6  grid-item cinema pb-3">
                     <a class="gallery_img" href="">
-                                            <iframe width="540" height="280" src="https://www.youtube.com/embed/p_grLhslv5I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="card-img"></iframe>
+                <iframe width="540" height="280" src="https://www.youtube.com/embed/p_grLhslv5I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="card-img"></iframe>
 
                 </div>
                 <div class="text-center more col-md-12  grid-item cinema"><a href="#!">More
