--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="css/plugins.min.css">
     <!-- Custom CSS File -->
     <link rel="stylesheet" href="css/style.css">
+    
+    
 </head>
 
 <body>
@@ -591,9 +593,19 @@
     <!-- Gallery Js -->
     <script src="js/isotope.pkgd.min.js"></script>
     <script type="text/javascript" src="js/gallery.js"></script>
-    <script>
-    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
-    </script>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/639c0e4edaff0e1306dceade/1gkcpfp9f';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 </body>
 
 </html>
